--- a/css/servers.css
+++ b/css/servers.css
@@ -11,6 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 .sd-server-list {
@@ -20,6 +21,7 @@ body {
     width: 100%;
     max-width: 600px;
     padding: 20px;
+    overflow-x: hidden;
 }
 
 .sd-server {
